--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -3,6 +3,7 @@ html,body{width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
+  font-size: 0.16rem;
 }
 *{
   padding: 0;
